[package]
name = "syndra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.12"}
dotenv = "0.15.0"